--- a/Erdem/index.html
+++ b/Erdem/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deneme Web Sitesi</title>
+    <title>Deneme Web Sitesi Erdem</title>
 </head>
 <body>
     
